2003-04-11  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py: major fixes. Use different
	POLLIN/OUT flags to robustly work around pygtk bug, change
	callback() to behave more like pollreactor (since gtk uses poll
	internally). doIteration now calls gtk.main_iteration in a
	non-blocking way. Attempt to emulate doIteration(delay!=0) by
	using time.sleep().

	* twisted/internet/gtkreactor.py: same fixes as for gtk2reactor.
	Instead of a pygtk bug we've got the limited gtk_input_add API,
	which hides POLLHUP/POLLERR, so detecting closed fds might not be
	as reliable.
 
2003-04-11  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/lore:
	Added a "lore-slides" plugin, with HTML, Magicpoint and Prosper output
	targets.  It's still a bit rough, but functional.

2003-04-10  Kevin Turner  <acapnotic@twistedmatrix.com>

	* .: Release 1.0.4alpha2.

2003-04-09  Brian Warner  <warner@lothar.com>

	* twisted/scripts/trial.py (Options.opt_reactor): install reactor
	before parseArgs() does an import and installs the default one

	* twisted/internet/process.py: fix typo,
	s/registerReapProccessHandler/registerReapProcessHandler)/

2003-04-09  Jp Calderone <exarkun@twistedmatrix.com>

	* twisted/internet/base.py: Change the sort order of DelayedCalls
	and remove them from the end of the list instead of the beginning.
	This changes O(n) complexity to O(1) complexity.

2003-04-09  Brian Warner  <warner@lothar.com>

	* twisted/test/test_jelly.py, test_newjelly: Test cleanup.
	Parameterize the jelly module used by the tests, make test_jelly a
	subclass of test_newjelly using a different jelly module: tests
	should now be unified. Also change tests to use proper trial
	self.failUnless() methods instead of bare assert().

2003-04-09  Bob Ippolito  <bob@redivi.com>

	* twisted/python/util.py (OrderedDict): added a UserDict subclass
	that preserves insert order (for __repr__, items, values, keys).
